--- a/Homework_3.tex
+++ b/Homework_3.tex
@@ -21,7 +21,7 @@ To solve this problem I used the master theorem taken from CLRS. I used a bit of
 T(n) = \left\{
 \begin{array}{cl}
 c & \textrm{ if } n < 8\\
-16T(n/8) + n\log{n} & \textrm{ if } n \geq 8
+16T(\frac{n}{8}) + n\log{n} & \textrm{ if } n \geq 8
 \end{array}
 \right.
 \]
@@ -33,7 +33,7 @@ T(n)&\in\Theta(n^{\frac{4}{3}})
 \end{align*}
 By Akra-Bazzi I obtain:\\
 \begin{align*}
-16(1/8)^{p}&=1\\
+16(\frac{1}{8})^{p}&=1\\
 p&=\frac{4}{3}
 \end{align*}
 \begin{align*}
@@ -46,7 +46,7 @@ T(n) &\in \Theta(n^{p}(1+\int_{1}^{n}{\frac{u\log{u}}{u^{p+1}}du}))\\
 T(n) = \left\{
 \begin{array}{cl}
 c & \textrm{ if } n < 4\\
-8T(n/4) + n\log n & \textrm{ if } n \geq 4
+8T(\frac{n}{4}) + n\log n & \textrm{ if } n \geq 4
 \end{array}
 \right.
 \]
@@ -58,7 +58,7 @@ By Master Method I obtain case 2:
 \end{align*}
 By Akra-Bazzi I obtain:
 \begin{align*}
-    2(1/8)^{p}&=1\\
+    2(\frac{1}{8})^{p}&=1\\
     p&=\frac{1}{3}
 \end{align*}
 \begin{align*}
@@ -71,7 +71,7 @@ By Akra-Bazzi I obtain:
 T(n) = \left\{
 \begin{array}{cl}
 c & \textrm{ if } n < 2\\
-3T(n/2) + 9^n & \textrm{ if } n \geq 2
+3T(\frac{n}{2}) + 9^n & \textrm{ if } n \geq 2
 \end{array}
 \right.
 \]
@@ -87,7 +87,7 @@ This recurrence is not well suited for Akra-Bazzi.
 T(n) = \left\{
 \begin{array}{cl}
 c & \textrm{ if } n \leq 1\\
-3T(3n/5) + n^2 & \textrm{ if } n > 1
+3T(\frac{3n}{5}) + n^2 & \textrm{ if } n > 1
 \end{array}
 \right.
 \]
@@ -100,7 +100,7 @@ By Master Method I obtain case 1:
 \end{align*}
 By Akra-Bazzi I obtain:
 \begin{align*}
-    3(3/5)^{p}&=1\\
+    3(\frac{3}{5})^{p}&=1\\
     p&=\log_{\frac{5}{3}}{3}
 \end{align*}
 \begin{align*}
@@ -113,7 +113,7 @@ By Akra-Bazzi I obtain:
 T(n) = \left\{
 \begin{array}{cl}
 c & \textrm{ if } n \leq 1\\
-3T(3n/5) + n^{2.5} & \textrm{ if } n > 1
+3T(\frac{3n}{5}) + n^{2.5} & \textrm{ if } n > 1
 \end{array}
 \right.
 \]
@@ -125,9 +125,8 @@ By Master Method I obtain case 3:
     &\in \Theta(n^{2.5})\\
 \end{align*}
 \end{enumerate}
-\begin{enumerate}
+
 \section{EXPLORE}
-\item 
 For the following problems stated as pseudo-code, let $A[\ell\dots r]$ denote the sublist of the integer list $A$ from the $\ell$-th to the $r$-th element inclusive, let Cubic($A[1\dots n]$) denote an algorithm that runs in time $\Theta(n^3)$, and let Swift($A[1\dots n]$) denote an algorithm that runs in time $\Theta(n\log(\log n))$.\\
 {\ttfamily
 $\phantom{A}$\\
@@ -139,6 +138,45 @@ $\phantom{--- ---}$ Three($A[\lfloor\frac{n}{4}\rfloor+1\dots \lfloor\frac{3n}{4
 $\phantom{--- ---}$ Three($A[\lfloor\frac{n}{2}\rfloor+1\dots n]$)\\
 $\phantom{---}$ End Three.
 }
-
+\begin{enumerate}
+\item [(6 points) 1.] State a recurrence that gives the complexity $T(n)$ for algorithm \texttt{Three}.\\\\
+For this problem I decided to analyze the cost of running each line individually.\\
+{\ttfamily
+$\phantom{A}$\\
+$\phantom{---}$ Three($A[1\dots n]$) O(1)\\
+$\phantom{--- ---}$ If $n \leq 1$ Then Return // nothing to do O(1)\\
+$\phantom{--- ---}$ Cubic($A[1\dots n]$) O($n^3$)\\
+$\phantom{--- ---}$ Three($A[1\dots\lfloor\frac{n}{2}\rfloor]$) T($\frac{n}{2}$)\\
+$\phantom{--- ---}$ Three($A[\lfloor\frac{n}{4}\rfloor+1\dots \lfloor\frac{3n}{4}\rfloor]$) T($\frac{n}{2}$)\\
+$\phantom{--- ---}$ Three($A[\lfloor\frac{n}{2}\rfloor+1\dots n]$) T($\frac{n}{2}$)\\
+$\phantom{---}$ End Three. O(1)
+}\\
+Which gives me the following recurrece relation:\\
+\[
+T(n) = \left\{
+\begin{array}{cl}
+c & \textrm{ if } n \leq 1\\
+3T(\frac{n}{2}) + n^3 & \textrm{ if } n > 1
+\end{array}
+\right.
+\]
+\item [(6 points) 2.] Find the tight complexity of algorithm \texttt{Three}.\\\\
+By Master Theorem I obtain case 3:\\
+\begin{align*}
+    \lim_{n\to\infty}{\frac{n^3}{n^{\log{3}+\varepsilon}}}&=\lim_{n\to\infty}{\frac{n^3}{n^{\log{3}+(2 - \log{3})}}}\\
+    &=\lim_{n\to\infty}{\frac{n^3}{n^2}}\\
+    &=\lim_{n\to\infty}{n}\rightarrow\infty\\
+    T(n)&\in \Theta(n^{3})\\
+\end{align*}
+By Akra-Bazzi I obtain:
+\begin{align*}
+    3(\frac{1}{2})^{p}&=1\\
+    p&=\log_{2}{3}
+\end{align*}
+\begin{align*}
+    T(n) &\in \Theta(n^{p}(1+\int_{1}^{n}{\frac{u^{3}}{u^{p+1}}du}))\\
+    &\in \Theta(0.293305 n^{1.58496}+0.706695 n^{3})\\
+    &\in \Theta(n^{3})\\
+\end{align*}
 \end{enumerate}
 \end{document}
